--- a/app/src/main/res/layout/gear_management_home.xml
+++ b/app/src/main/res/layout/gear_management_home.xml
@@ -14,20 +14,20 @@
         android:text="@string/rentals"
         android:textSize="16sp"
         android:background="@drawable/round_button_grey"
-        app:layout_constraintBottom_toTopOf="@+id/checkin_button" />
+        app:layout_constraintBottom_toTopOf="@+id/inventory_button" />
 
     <Button
-        android:id="@+id/checkin_button"
+        android:id="@+id/inventory_button"
         android:layout_width="match_parent"
         android:layout_height="45dp"
         android:layout_margin="5dp"
         android:textSize="16sp"
         android:text="@string/inventory"
         android:background="@drawable/round_button_grey"
-        app:layout_constraintBottom_toTopOf="@id/checkout_button" />
+        app:layout_constraintBottom_toTopOf="@id/messages_button" />
 
     <Button
-        android:id="@+id/checkout_button"
+        android:id="@+id/messages_button"
         android:layout_width="match_parent"
         android:layout_height="45dp"
         android:layout_margin="5dp"
@@ -39,7 +39,7 @@
         />
 
     <TextView
-        app:layout_constraintTop_toBottomOf="@id/checkout_button"
+        app:layout_constraintTop_toBottomOf="@id/messages_button"
         android:id="@+id/return_to_dash_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
