--- a/app/src/main/res/layout-v28/message_cardview.xml
+++ b/app/src/main/res/layout-v28/message_cardview.xml
@@ -1,18 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/message_cardview"
-    android:layout_width="wrap_content"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:outlineAmbientShadowColor="@color/fui_transparent"
+    android:outlineSpotShadowColor="@color/fui_transparent"
     app:cardBackgroundColor="@color/fui_transparent"
-    app:cardUseCompatPadding="true"
-    tools:ignore="UnusedAttribute">
+    app:cardUseCompatPadding="true">
 
     <TextView
         android:id="@+id/message_textview"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:background="@drawable/text_bubble_sender"
         android:paddingVertical="10dp" />
