--- a/app/src/main/res/layout/fragment_inventory.xml
+++ b/app/src/main/res/layout/fragment_inventory.xml
@@ -21,6 +21,8 @@
         app:layout_constraintEnd_toEndOf="parent"
         android:layout_gravity="end|bottom"
         android:layout_marginVertical="16dp"
+        android:backgroundTint="@color/colorGrey"
+        android:tint="@android:color/black"
         android:layout_marginHorizontal="8dp"
         android:src="@drawable/ic_cart" />
 
