--- a/app/src/main/res/drawable/text_bubble_reciever.xml
+++ b/app/src/main/res/drawable/text_bubble_reciever.xml
@@ -7,13 +7,13 @@
             android:pivotY="100%"
             android:toDegrees="0" >
             <shape android:shape="rectangle" >
-                <solid android:color="@color/colorDarkBlue" />
+                <solid android:color="@color/colorPrimaryDark"/>
             </shape>
         </rotate>
     </item>
     <item android:left="16dp">
         <shape android:shape="rectangle" >
-            <solid android:color="@color/colorDarkBlue" />
+            <solid android:color="@color/colorPrimaryDark" />
             <corners android:radius="4dp" />
         </shape>
     </item>
