--- a/app/src/main/res/layout/add_item_confirmation.xml
+++ b/app/src/main/res/layout/add_item_confirmation.xml
@@ -3,6 +3,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
+    android:id="@+id/add_item_confirmation"
     android:background="@color/colorDarkBlue">
 
     <TextView
