--- a/app/src/main/res/navigation/mobile_navigation_management.xml
+++ b/app/src/main/res/navigation/mobile_navigation_management.xml
@@ -64,6 +64,9 @@
         <action
             android:id="@+id/action_navigation_management_inventory_to_popUpInventory"
             app:destination="@id/popUpInventory" />
+        <action
+            android:id="@+id/action_navigation_management_inventory_to_addItem"
+            app:destination="@id/addItem" />
     </fragment>
 
     <fragment
@@ -150,5 +153,9 @@
             android:name="item"
             app:argType="edu.rosehulman.gearlocker.models.Item" />
     </dialog>
+    <fragment
+        android:id="@+id/addItem"
+        android:name="edu.rosehulman.gearlocker.inventory.AddItem"
+        android:label="AddItem" />
 
 </navigation>
