--- a/app/src/main/res/layout/gear_summary_popup.xml
+++ b/app/src/main/res/layout/gear_summary_popup.xml
@@ -32,6 +32,7 @@
         android:id="@+id/description_text_view"
         android:layout_width="150dp"
         android:layout_height="wrap_content"
+        android:minLines="10"
         android:layout_below="@id/divider"
         android:layout_marginStart="25dp"
         android:layout_marginTop="15dp"
@@ -50,7 +51,7 @@
         android:layout_marginTop="15dp"
         android:layout_marginEnd="15dp"
         android:layout_marginBottom="15dp"
-        android:layout_toRightOf="@id/description_text_view"
+        android:layout_toEndOf="@id/description_text_view"
         android:adjustViewBounds="false"
         app:srcCompat="@drawable/ic_gear" />
 
@@ -58,10 +59,10 @@
         android:id="@+id/stock_text_view"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_above="@+id/delete_item_button"
         android:layout_below="@id/item_photo"
         android:layout_alignStart="@id/item_photo"
         android:layout_alignEnd="@id/item_photo"
-        android:layout_alignBottom="@id/description_text_view"
         android:text="@string/demo_stock_information"
         android:textAlignment="center" />
 
@@ -81,11 +82,12 @@
         android:layout_below="@id/description_text_view"
         android:layout_alignEnd="@id/description_text_view"
         android:layout_marginStart="10dp"
-        android:layout_marginEnd="5dp"
-        android:layout_toRightOf="@id/condition_text_view"
+        android:layout_marginEnd="0dp"
+        android:layout_toEndOf="@id/condition_text_view"
         android:background="@color/colorGreen"
         android:text="@string/condition_new"
-        android:textSize="20sp" />
+        android:paddingHorizontal="5dp"
+        android:textSize="18sp" />
 
     <Button
         android:id="@+id/delete_item_button"
@@ -96,32 +98,34 @@
         android:layout_alignEnd="@id/stock_text_view"
         android:layout_alignBottom="@id/current_condition_text_view"
         android:layout_marginStart="40dp"
-        android:layout_toRightOf="@id/current_condition_text_view"
+        android:layout_toEndOf="@id/current_condition_text_view"
         android:background="@color/colorRed"
         android:text="@string/delete_an_item"
         android:textSize="12sp" />
+
+    <LinearLayout
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
+        android:layout_below="@id/condition_text_view">
 
     <Button
         android:id="@+id/cancel_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@id/condition_text_view"
-        android:layout_alignStart="@id/current_condition_text_view"
-        android:layout_alignParentBottom="false"
-        android:layout_centerHorizontal="false"
         android:layout_marginTop="30dp"
         android:background="@color/colorAccent"
-        android:text="@android:string/cancel" />
+        android:text="@android:string/cancel"
+        android:layout_marginBottom="10dp"/>
 
     <Button
         android:id="@+id/edit_item_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@id/condition_text_view"
-        android:layout_alignParentBottom="false"
         android:layout_marginTop="30dp"
-        android:layout_toRightOf="@id/cancel_button"
         android:background="@color/colorPrimaryDark"
-        android:text="@string/edit_item" />
+        android:text="@string/edit_item"
+        android:layout_marginBottom="10dp"/>
+    </LinearLayout>
 
 </RelativeLayout>
