--- a/app/src/main/res/layout/renter_activity_main.xml
+++ b/app/src/main/res/layout/renter_activity_main.xml
@@ -7,6 +7,22 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
+
+  <com.google.android.material.appbar.AppBarLayout
+      android:id="@+id/app_bar"
+      app:layout_constraintTop_toTopOf="parent"
+      android:layout_width="match_parent"
+      android:layout_height="wrap_content"
+      android:theme="@style/AppTheme.AppBarOverlay">
+
+  <android.widget.Toolbar android:layout_height="wrap_content"
+      android:id="@+id/toolbar"
+      android:tooltipText="Toolbar"
+      app:layout_constraintTop_toTopOf="parent"
+      android:layout_width="match_parent"/>
+  </com.google.android.material.appbar.AppBarLayout>
+
+
   <com.google.android.material.bottomnavigation.BottomNavigationView
       android:background="@color/colorDarkBlue"
       android:id="@+id/nav_view"
@@ -25,11 +41,12 @@
       android:name="androidx.navigation.fragment.NavHostFragment"
       android:layout_width="match_parent"
       android:layout_height="match_parent"
+      android:layout_marginTop="56dp"
       app:defaultNavHost="true"
       app:layout_constraintBottom_toTopOf="@id/nav_view"
       app:layout_constraintLeft_toLeftOf="parent"
       app:layout_constraintRight_toRightOf="parent"
-      app:layout_constraintTop_toTopOf="parent"
+      app:layout_constraintTop_toBottomOf="@+id/app_bar"
       app:navGraph="@navigation/mobile_navigation"
       tools:ignore="FragmentTagUsage" />
 
