Added clubs and club navigation.

--- a/app/src/main/res/layout/add_club_home.xml
+++ b/app/src/main/res/layout/add_club_home.xml
@@ -21,11 +21,11 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <ListView
+    <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/listView"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_below="@+id/search_view"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toBottomOf="@id/search_view"
         android:divider="@color/colorBlue"
         android:dividerHeight="2dp" />
 </androidx.constraintlayout.widget.ConstraintLayout>
