Added the forms navigation and uids.

--- a/app/src/main/res/layout/fragment_form_overview.xml
+++ b/app/src/main/res/layout/fragment_form_overview.xml
@@ -1,16 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="@color/colorBlue"
     android:padding="25dp"
-    android:id="@+id/form_overview"
-    android:orientation="vertical">
+    android:layout_marginBottom="50dp"
+    android:id="@+id/form_overview">
+
 
     <TextView
+        android:id="@+id/current_rentals"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        app:layout_constraintTop_toTopOf="parent"
         android:background="@color/colorDarkBlue"
         android:padding="10dp"
         android:text="Current Rentals"
@@ -21,9 +24,12 @@
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/current_rental_recycler_view"
         android:layout_width="match_parent"
+        app:layout_constraintTop_toBottomOf="@id/current_rentals"
         android:layout_height="200dp" />
 
     <TextView
+        android:id="@+id/past_rentals"
+        app:layout_constraintTop_toBottomOf="@+id/current_rental_recycler_view"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="35dp"
@@ -36,7 +42,20 @@
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/past_rental_recycler_view"
+        app:layout_constraintTop_toBottomOf="@id/past_rentals"
         android:layout_width="match_parent"
         android:layout_height="200dp" />
 
-</LinearLayout>
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/fab_forms"
+        android:layout_gravity="end|bottom"
+        android:backgroundTint="@color/colorGrey"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:tint="@android:color/black"
+        android:layout_marginHorizontal="8dp"
+        android:src="@drawable/ic_add" />
+
+</androidx.constraintlayout.widget.ConstraintLayout>
