--- a/app/src/main/res/layout/fragment_upload_form.xml
+++ b/app/src/main/res/layout/fragment_upload_form.xml
@@ -4,7 +4,17 @@
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:layout_marginBottom="50dp"
     android:background="@color/colorBlue">
+
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        >
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
 
     <TextView
         android:layout_width="wrap_content"
@@ -135,6 +145,9 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:text="Cancel"
+        android:layout_marginBottom="20dp"
         android:background="@color/colorAccent"/>
+        </LinearLayout>
+    </ScrollView>
 
 </LinearLayout>
