--- a/app/src/main/res/navigation/mobile_navigation_management.xml
+++ b/app/src/main/res/navigation/mobile_navigation_management.xml
@@ -66,7 +66,14 @@
             app:destination="@id/popUpInventory" />
         <action
             android:id="@+id/action_navigation_management_inventory_to_addItem"
-            app:destination="@id/addItem" />
+            app:destination="@id/addItem"
+            >
+            <argument
+                android:name="inventoryFragment"
+                app:argType="edu.rosehulman.gearlocker.inventory.InventoryFragment"
+                app:nullable="true"
+                android:defaultValue="@null" />
+        </action>
     </fragment>
 
     <fragment
@@ -162,7 +169,13 @@
     <fragment
         android:id="@+id/addItem"
         android:name="edu.rosehulman.gearlocker.inventory.AddItem"
-        android:label="AddItem" />
+        android:label="AddItem" >
+        <argument
+            android:name="inventoryFragment"
+            app:argType="edu.rosehulman.gearlocker.inventory.InventoryFragment"
+            app:nullable="true"
+            android:defaultValue="@null" />
+    </fragment>
     <fragment
         android:id="@+id/deleteFragment"
         android:name="edu.rosehulman.gearlocker.deleteitem.DeleteFragment"
