Finished cart xmls, cart fragment, and navigation to cart, although not adding gear to cart yet.

--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -103,6 +103,10 @@
         android:id="@+id/clubsFragment"
         android:name="edu.rosehulman.gearlocker.clubs.ClubsFragment"
         android:label="ClubsFragment" />
+    <fragment
+        android:id="@+id/cartFragment"
+        android:name="edu.rosehulman.gearlocker.cart.CartFragment"
+        android:label="CartFragment" />
 
 
 </navigation>
