Added the login methods so data could be tied with users. Also created a splash fragment xml and fragment.

--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -107,6 +107,10 @@
         android:id="@+id/cartFragment"
         android:name="edu.rosehulman.gearlocker.cart.CartFragment"
         android:label="CartFragment" />
+    <fragment
+        android:id="@+id/splashFragment"
+        android:name="edu.rosehulman.gearlocker.SplashFragment"
+        android:label="SplashFragment" />
 
 
 </navigation>
