--- a/app/src/main/res/menu/app_bar_menu.xml
+++ b/app/src/main/res/menu/app_bar_menu.xml
@@ -10,7 +10,12 @@
 
     <item
         android:id="@+id/add_demo_data"
-        android:title="Add Demo Data"
+        android:title="@string/add_demo_data"
+        android:orderInCategory="80"/>
+
+    <item
+        android:id="@+id/log_out"
+        android:title="@string/log_out"
         android:orderInCategory="100"/>
 
 </menu>
