--- a/app/src/main/res/layout/splash_fragment.xml
+++ b/app/src/main/res/layout/splash_fragment.xml
@@ -11,7 +11,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="250dp"
+        android:layout_marginTop="120dp"
         android:text="@string/app_name"
         android:padding="10dp"
         android:textColor="#DEDFDE"
@@ -27,7 +27,7 @@
         android:layout_marginTop="10dp"
         android:layout_marginEnd="30dp"
         android:background="@color/colorAccent"
-        android:text="Login with RoseFire" />
+        android:text="@string/login_with_rosefire" />
 
     <Button
         android:id="@+id/login_email_button"
@@ -47,6 +47,7 @@
         android:layout_below="@id/login_email_button"
         android:layout_alignParentBottom="true"
         android:layout_marginTop="75dp"
+        android:contentDescription="@string/mountains"
         android:src="@drawable/ic_mountains" />
 
     </RelativeLayout>
