Images can now be added using an ImageProducer. Add item and check in both can use this feature.

--- a/app/src/main/res/layout/add_edit_management.xml
+++ b/app/src/main/res/layout/add_edit_management.xml
@@ -254,7 +254,7 @@ helpful to the renter(s)."
         <ImageView
             android:id="@+id/gear_image"
             android:layout_gravity="center"
-            android:scaleType="fitCenter"
+            android:scaleType="centerInside"
             android:layout_marginHorizontal="25dp"
             android:layout_marginVertical="5dp"
             android:maxHeight="100dp"
