--- a/app/src/main/res/layout/check_in.xml
+++ b/app/src/main/res/layout/check_in.xml
@@ -98,20 +98,45 @@
                 android:contentDescription="photo_from_check_out" />
 
             <ImageView
+                android:id="@+id/check_in_photo"
                 android:layout_width="150dp"
                 android:layout_height="150dp"
+                android:scaleType="centerInside"
                 app:srcCompat="@drawable/ic_gear"
-                android:contentDescription="photo_from_check_in"/>
+                android:contentDescription="photo_from_check_in">
+
+            </ImageView>
         </TableRow>
     </TableLayout>
+
+    <Button
+        android:id="@+id/upload_photo"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/photo_view"
+        android:text="@string/upload_photo"
+        android:textSize="12sp"
+        android:layout_toLeftOf="@id/take_photo"/>
+
+    <Button
+        android:id="@+id/take_photo"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/photo_view"
+        android:text="@string/take_photo"
+        android:textSize="12sp"
+        android:layout_alignEnd="@id/photo_view"
+        android:layout_marginRight="10dp"/>
+
+
 
     <androidx.cardview.widget.CardView
         android:id="@+id/check_in_rating"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@id/photo_view"
+        android:layout_below="@id/upload_photo"
         android:layout_marginStart="10dp"
-        android:layout_marginTop="25dp"
+        android:layout_marginTop="10dp"
         android:layout_marginEnd="10dp"
         android:layout_marginBottom="10dp"
         android:backgroundTint="@color/colorGrey">
