Worked on delete and passing information through.

--- a/app/src/main/res/navigation/mobile_navigation_management.xml
+++ b/app/src/main/res/navigation/mobile_navigation_management.xml
@@ -74,6 +74,9 @@
                 app:nullable="true"
                 android:defaultValue="@null" />
         </action>
+        <action
+            android:id="@+id/action_navigation_management_inventory_to_deleteFragment"
+            app:destination="@id/deleteFragment" />
     </fragment>
 
     <fragment
@@ -162,9 +165,6 @@
         <argument
             android:name="item"
             app:argType="edu.rosehulman.gearlocker.models.Item" />
-        <action
-            android:id="@+id/action_popUpInventory_to_deleteFragment"
-            app:destination="@id/deleteFragment" />
     </dialog>
     <fragment
         android:id="@+id/addItem"
@@ -183,7 +183,13 @@
     <fragment
         android:id="@+id/deleteFragment"
         android:name="edu.rosehulman.gearlocker.deleteitem.DeleteFragment"
-        android:label="DeleteFragment" />
+        android:label="DeleteFragment" >
+        <argument
+            android:name="itemCatagory"
+            app:argType="edu.rosehulman.gearlocker.models.ItemCategory"
+            app:nullable="true"
+            android:defaultValue="@null" />
+    </fragment>
     <fragment
         android:id="@+id/formUploadFragment"
         android:name="edu.rosehulman.gearlocker.rentals.FormUploadFragment"
