--- a/app/src/main/res/layout/gear_summary_popup.xml
+++ b/app/src/main/res/layout/gear_summary_popup.xml
@@ -2,21 +2,22 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/gear_summary_popup"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
     android:background="@color/colorDarkBlue"
-    android:backgroundTint="@color/colorDarkBlue">
+    android:layout_centerInParent="true"
+    android:layout_centerHorizontal="true"
+    android:paddingBottom="15dp">
 
     <TextView
         android:id="@+id/title_text_view"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
-        android:layout_marginStart="15dp"
-        android:layout_marginTop="15dp"
-        android:layout_marginEnd="15dp"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_margin="15dp"
         android:textColor="@color/colorGrey"
-        android:layout_marginBottom="15dp"
         android:text="La Sportiva Tarantulaces"
         android:textAlignment="center"
         android:textSize="24sp" />
@@ -29,16 +30,21 @@
         android:background="@color/colorPrimaryDark"
         android:backgroundTint="@color/colorPrimaryDark" />
 
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/constraint"
+        android:layout_below="@id/divider"
+        android:layout_width="match_parent"
+        android:padding ="10dp"
+        android:layout_height="wrap_content">
+
     <TextView
         android:id="@+id/description_text_view"
         android:layout_width="150dp"
         android:layout_height="wrap_content"
-        android:layout_below="@id/divider"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintBottom_toTopOf="@id/current_condition_text_view"
         android:textColor="@color/colorGrey"
-        android:layout_marginStart="25dp"
-        android:layout_marginTop="15dp"
-        android:layout_marginEnd="10dp"
-        android:layout_marginBottom="25dp"
+        android:layout_margin="15dp"
         android:minLines="10"
         android:text="@string/demo_item_description"
         android:textSize="18sp" />
@@ -47,34 +53,32 @@
         android:id="@+id/item_photo"
         android:layout_width="150dp"
         android:layout_height="150dp"
-        android:layout_below="@id/divider"
-        android:layout_alignParentEnd="true"
-        android:layout_marginStart="15dp"
-        android:layout_marginTop="15dp"
-        android:layout_marginEnd="15dp"
-        android:layout_marginBottom="15dp"
-        android:layout_toEndOf="@id/description_text_view"
-        android:adjustViewBounds="false"
-        app:srcCompat="@drawable/ic_gear" />
+        android:scaleType="centerInside"
+        app:layout_constraintStart_toEndOf="@id/description_text_view"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toTopOf="@id/stock_text_view"
+        android:layout_margin="15dp"
+        app:srcCompat="@drawable/ic_gear"
+        android:contentDescription="TODO" />
 
     <TextView
         android:id="@+id/stock_text_view"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_above="@+id/delete_item_button"
-        android:layout_below="@id/item_photo"
-        android:layout_alignStart="@id/item_photo"
-        android:layout_alignEnd="@id/item_photo"
+        app:layout_constraintTop_toBottomOf="@id/item_photo"
+        app:layout_constraintStart_toStartOf="@id/item_photo"
         android:textColor="@color/colorGrey"
         android:text="@string/demo_stock_information"
-        android:textAlignment="center" />
+        android:textAlignment="center"
+        android:maxLines="3"/>
 
     <TextView
         android:id="@+id/condition_text_view"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@id/description_text_view"
-        android:layout_alignStart="@id/description_text_view"
+        android:layout_marginTop="15dp"
+        app:layout_constraintStart_toStartOf="@id/description_text_view"
+        app:layout_constraintTop_toBottomOf="@+id/description_text_view"
         android:textColor="@color/colorGrey"
         android:text="@string/condition"
         android:textSize="20sp" />
@@ -83,47 +87,31 @@
         android:id="@+id/current_condition_text_view"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@id/description_text_view"
-        android:layout_alignEnd="@id/description_text_view"
+        app:layout_constraintStart_toEndOf="@+id/condition_text_view"
+        app:layout_constraintBottom_toBottomOf="@+id/condition_text_view"
         android:layout_marginStart="10dp"
-        android:layout_toEndOf="@id/condition_text_view"
         android:background="@color/colorGreen"
         android:paddingHorizontal="5dp"
         android:text="@string/condition_new"
         android:textSize="18sp" />
 
-    <Button
-        android:id="@+id/delete_item_button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/description_text_view"
-        android:layout_alignTop="@id/current_condition_text_view"
-        android:layout_alignBottom="@id/current_condition_text_view"
-        android:layout_alignEnd="@id/stock_text_view"
-        android:layout_marginStart="20dp"
-        android:paddingHorizontal="20dp"
-        android:layout_toEndOf="@id/current_condition_text_view"
-        android:background="@drawable/round_button_red"
-        android:text="@string/delete_an_item"
-        android:textSize="12sp" />
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@id/condition_text_view"
-        android:paddingHorizontal="40dp"
-        android:layout_marginBottom="10dp"
+        android:layout_below="@+id/constraint"
+        android:layout_marginVertical="10dp"
         android:weightSum="2"
+        android:paddingHorizontal="15dp"
         android:layout_centerHorizontal="true">
 
-        <Button
+    <Button
             android:id="@+id/cancel_button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="15dp"
-            android:layout_marginBottom="10dp"
-            android:paddingHorizontal="10dp"
             android:layout_weight="1"
+            android:paddingHorizontal="10dp"
             android:background="@color/colorAccent"
             android:text="@android:string/cancel" />
 
@@ -132,9 +120,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:layout_marginTop="15dp"
             android:paddingHorizontal="10dp"
-            android:layout_marginBottom="10dp"
             android:background="@color/colorPrimaryDark"
             android:text="@string/edit_item" />
     </LinearLayout>
