--- a/app/src/main/res/layout/inventory_card_view_2.xml
+++ b/app/src/main/res/layout/inventory_card_view_2.xml
@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:padding="5dp"
-    app:cardCornerRadius="10dp"
-    android:gravity="center_horizontal"
     android:layout_margin="10dp"
-    android:orientation="vertical">
+    android:gravity="center_horizontal"
+    android:orientation="vertical"
+    android:padding="5dp"
+    app:cardCornerRadius="10dp">
 
     <TextView
         android:id="@+id/item_type_text"
@@ -25,22 +25,40 @@
         android:id="@+id/content_container"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:divider="@drawable/divider"
         android:orientation="vertical"
-        android:showDividers="middle"
-        android:divider="@drawable/divider">
+        android:showDividers="middle">
 
     </LinearLayout>
 
-    <Button
-        android:id="@+id/see_more_btn"
-        android:layout_marginTop="8dp"
-        android:paddingHorizontal="30dp"
+    <LinearLayout
         android:layout_width="wrap_content"
-        android:layout_height="45dp"
-        android:background="@drawable/round_button"
-        android:text="@string/see_more">
+        android:layout_height="wrap_content"
+        android:layout_gravity="center">
 
-    </Button>
 
+        <Button
+            android:id="@+id/see_more_btn"
+            android:layout_width="wrap_content"
+            android:layout_height="45dp"
+            android:layout_marginTop="8dp"
+            android:background="@drawable/round_button"
+            android:paddingHorizontal="30dp"
+            android:layout_marginRight="10dp"
+            android:text="@string/see_more">
+
+        </Button>
+
+        <Button
+            android:id="@+id/delete_btn"
+            android:layout_width="wrap_content"
+            android:layout_height="45dp"
+            android:layout_marginTop="8dp"
+            android:background="@drawable/round_button_red"
+            android:paddingHorizontal="30dp"
+            android:text="@string/delete_an_item">
+
+        </Button>
+    </LinearLayout>
 
 </LinearLayout>
